--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fpp7",
+  "homepage": "https://eggsdoo.github.io/fpp7",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,10 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
